src/components/Table/Table.scss
@import '../../styles/core-mixins.scss';

.Table {
  @include flexOff;
  @include flexCol;

  position: relative; // for Table-settings

  // height is defined in JSX

  overflow: hidden;
}

// this is to allow resizing of the rightmost column
$tableResizeRightPadding: 20px;

.Table-header {
  @include flexOff;

  position: absolute; // Allow width to respect children not parent (enable horiz scrolling)
  // height is defined in JSX
  min-width: 100%;
  background-color: #fff;
  .dark & { background-color: $zorroa-greyish-brown; }

  padding-right: $tableResizeRightPadding;

}

.Table-header-cell {
  height: 100%;
  @include flexRowCenter;

  &.ordered {
    background-color: $zorroa-selected;
    .dark & { background-color: $zorroa-dark-selected; }
  }

  &.hovered {
    background-color: $zorroa-nearwhite;
    .dark & { background-color: $zorroa-darkgray; }
  }
}

.Table-header-sort {
  @include flexRowCenter;
  @include flexOff;
  height: 24px;
  width: 16px;
  padding-right: 2px; // This compensates for the slight offset of icon-sort*
  font-size: 11px;
  cursor: pointer;
  border-radius: 3px;
  color: $zorroa-lightgray;

  .dark & { color: $zorroa-dimgray; }

  &.icon-sort {
    color: $zorroa-nearwhite;
  }

  &:hover {
    background-color: $zorroa-sickly-green;
    color: white;
  }
}

.Table-header-sort-order-0 {
  color: $zorroa-darkgray;
  .dark & { color: $zorroa-whitegray; }
}

.Table-header-sort-order-1 {
  color: $zorroa-gray;
}

.Table-header-sort-order-2 {
  color: $zorroa-lightgray;
}

.Table-header-resizer {
  @include flexRowCenter;
  height: 100%;
  width: 10px;
  cursor: col-resize;
}

.Table-header-resizer-handle {
  width: 7px;
  height: 100%;
  color: #f1f1f1;
  border-right: 1px solid $zorroa-nearwhite;
  .dark & { border-right: 1px solid $zorroa-dimgray; }
}

.Table-scroll-clip {
  @include flexOn;
  position: relative;

  // top & height are defined in JSX

  overflow: hidden;
}

.Table-scroll {
  height: 100%;
  width: 100%;
  position: relative;
  overflow: auto;
}

.Table-body {
  position: absolute; // Allow width to respect children not parent (enable horiz scrolling)
  min-width: 100%;

  border-bottom: 1px solid #aaa;
  border-spacing: 0;
  padding: 2px 0 2px 2px;
}

.Table-row {
  @include flexRow;
  @include flexAlignItemsCenter;
  @include flexNoWrap;

  position: absolute;
  left: 0;
  top: 0; // set in code

  height: 30px;
  min-width: 100%;

  padding-right: $tableResizeRightPadding;

  text-align: left;
  color: $zorroa-greyish-brown;
  border: 2px solid transparent;

  .dark & { background-color: black; }
  &.even {
    background-color: #fff;
    .dark & { background-color: $zorroa-mattblack; }
  }
  &.isSelected {
    background-color: $zorroa-selected;
    .dark & { background-color: $zorroa-dark-selected; }
  }
}


.Table-header {
  @include flexRow;
  @include flexAlignItemsCenter;
  @include flexNoWrap;
  // height is defined in JSX
  color: $zorroa-gray;
}

.Table-body .Table-row:hover {
  background-color: $zorroa-hover;
  .dark & { background-color: $zorroa-dark-hover; }
}

.Table-cell {
  text-align: left;
  font-size: 12px;
  font-family: Roboto Condensed;
  cursor: default;

  .dark & { color: $zorroa-whitegray; }
  &:not(.isOpen) { @include clampText; }
}

// This is for measure text, for auto column width resizing
#Table-cell-test {
  position: absolute;
  top: -500px;

  // Even with the &:not(.isOpen), measurment needs these values reset
  white-space: normal;
  min-width: inherit;
}

.Table-title {
  @include flexRowCenter;
  margin-left: 4px;
}

.Table-title-head {
  @include noSelect;
  @include nowrap;
  @include clampText;
  text-align: left;
  //text-transform: uppercase;
  font-size: 12px;
  font-family: Roboto Condensed;
  color: $zorroa-gray;
  .dark & { color: $zorroa-whitegray; }
}

.Table-title-tail {
  @include noSelect;
  @include clampText;
  @include nowrap;
  text-align: left;
  text-transform: uppercase;
  font-size: 12px;
  font-family: Roboto Condensed;
  color: $zorroa-lightgray;
  margin-left: 4px;
}

